Asynconf 2022, 1er sur 77 avec 99.4/100